--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         #copyButton {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 20px; /* Maintain the previous button size */
+            padding: 10px 20px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
@@ -52,6 +52,21 @@
         @keyframes fadeOut {
             0% { opacity: 1; }
             100% { opacity: 0; display: none; }
+        }
+
+        /* Responsive styles for screens smaller than 600px */
+        @media (max-width: 600px) {
+            body {
+                flex-direction: column;
+            }
+
+            #randomName {
+                font-size: 18px;
+            }
+
+            #copyButton {
+                margin-top: 10px;
+            }
         }
     </style>
 </head>
