Remove heading on small screen

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             #copyButton {
                 margin-top: 10px;
             }
+
+            h1 {
+                display: none; /* Hide the heading on smaller screens */
+            }
         }
     </style>
 </head>
@@ -77,6 +81,8 @@
         <button id="copyButton">Copy</button>
         <div id="notification"></div>
     </div>
+
+
 
     <script>
         // Function to fetch names from external CSV file
