--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Name Generator</title>
+    <title>Random Name and Email Generator</title>
     <script src="https://cdn.jsdelivr.net/clipboard.js/2.0.8/clipboard.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
@@ -16,24 +17,66 @@
             background-color: #f0f0f0;
         }
 
-        #randomName {
-            font-size: 24px;
-            margin-bottom: 20px;
-            text-align: left;
+        .container {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-start;
+            width: 80%;
+            max-width: 1200px;
+            background-color: #ffffff;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            position: relative;
         }
 
-        #copyButton {
+        .section {
+            width: 45%;
+            padding: 10px;
+        }
+
+        /* Add a vertical separator */
+        .separator {
+            width: 2px;
+            background-color: #ddd;
+            height: 100%;
+            position: absolute;
+            left: 50%;
+            top: 0;
+        }
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        #randomName, #generatedEmail {
+            font-size: 20px;
+            margin-bottom: 20px;
+            padding: 10px;
+            background-color: #f8f8f8;
+            border-radius: 4px;
+            border: 1px solid #ddd;
+        }
+
+        /* Unified button styles */
+        button {
+            display: inline-block;
             background-color: #4CAF50;
             color: white;
             padding: 10px 20px;
+            margin: 5px 0;
             border: none;
             border-radius: 4px;
             cursor: pointer;
             font-size: 16px;
+            text-align: center;
+            width: 100%;
             transition: background-color 0.3s ease;
         }
 
-        #copyButton:hover {
+        button:hover {
             background-color: #45a049;
         }
 
@@ -56,45 +99,54 @@
 
         /* Responsive styles for screens smaller than 600px */
         @media (max-width: 600px) {
-            body {
+            .container {
                 flex-direction: column;
+                align-items: center;
             }
 
-            #randomName {
-                font-size: 18px;
+            .section {
+                width: 100%;
             }
 
-            #copyButton {
-                margin-top: 10px;
-            }
-
-            h1 {
-                display: none; /* Hide the heading on smaller screens */
+            .separator {
+                display: none;
             }
         }
     </style>
 </head>
 <body>
-    <div>
-        <h1>Random Name Generator</h1>
-        <p id="randomName"></p>
-        <button id="copyButton">Copy</button>
-        <div id="notification"></div>
+    <div class="container">
+        <!-- Name Generator Section -->
+        <div class="section">
+            <h1>Random Name Generator</h1>
+            <p id="randomName"></p>
+            <button id="copyButton">Copy Name</button>
+        </div>
+
+        <!-- Separator between sections -->
+        <div class="separator"></div>
+
+        <!-- Email Generator Section -->
+        <div class="section">
+            <h1>Email Generator</h1>
+            <p id="generatedEmail"></p>
+            <button id="generateEmailButton">Generate Email</button>
+            <button id="copyEmailButton">Copy Email</button>
+            <button id="copyOtpButton">Copy OTP</button>
+        </div>
     </div>
 
-
+    <div id="notification"></div>
 
     <script>
-        // Function to fetch names from external CSV file
+        // Fetch names from external CSV file
         async function fetchNames() {
             try {
-                const response = await fetch('names.csv'); // Replace 'names.csv' with the path to your CSV file
+                const response = await fetch('names.csv');
                 const data = await response.text();
 
                 if (data) {
-                    // Parse CSV and consider the first column as names
                     const names = data.split('\n').map(row => row.split(',')[0].trim()).filter(name => name !== '');
-
                     return names;
                 } else {
                     console.error('Invalid CSV format or empty data in names.csv');
@@ -106,31 +158,16 @@
             }
         }
 
-        // Function to sanitize and format a name
+        // Sanitize and format the name
         function formatName(name) {
-            // Remove non-alphabetic characters
-            const sanitizedName = name.replace(/[^a-zA-Z ]/g, '');
-
-            // Limit length to 20 characters
-            const truncatedName = sanitizedName.slice(0, 20);
-
-            // Ensure at most two spaces
-            const formattedName = truncatedName.replace(/\s+/g, ' ').trim();
-            
-            // Split the name by spaces
-            const nameParts = formattedName.split(' ');
-
-            // Join the first two parts with a single space
-            const result = nameParts.slice(0, 2).join(' ');
-
-            return result;
+            const sanitizedName = name.replace(/[^a-zA-Z ]/g, '').slice(0, 20).replace(/\s+/g, ' ').trim();
+            return sanitizedName.split(' ').slice(0, 2).join(' ');
         }
 
-        // Function to generate a random name
+        // Generate a random name
         function generateRandomName(names) {
             const randomIndex = Math.floor(Math.random() * names.length);
-            const formattedName = formatName(names[randomIndex]);
-            return formattedName;
+            return formatName(names[randomIndex]);
         }
 
         // Display a random name on page load
@@ -138,33 +175,91 @@
             document.getElementById('randomName').innerText = generateRandomName(names);
         });
 
-        // Event listener for generating and copying a new random name
+        // Generate and copy name
         document.getElementById('copyButton').addEventListener('click', async function() {
             const names = await fetchNames();
             const newName = generateRandomName(names);
             document.getElementById('randomName').innerText = newName;
 
-            // Create a temporary textarea to copy the text to the clipboard
             const tempTextArea = document.createElement('textarea');
             tempTextArea.value = newName;
             document.body.appendChild(tempTextArea);
-
-            // Select and copy the text
             tempTextArea.select();
             document.execCommand('copy');
-
-            // Remove the temporary textarea
             document.body.removeChild(tempTextArea);
 
-            // Show notification
-            const notification = document.getElementById('notification');
-            notification.innerText = `Copied to clipboard: ${newName}`;
-            notification.style.display = 'block';
+            showNotification(`Copied to clipboard: ${newName}`);
+        });
 
-            // Hide notification after 2 seconds
+        // Show notification function
+        function showNotification(message) {
+            const notification = document.getElementById('notification');
+            notification.innerText = message;
+            notification.style.display = 'block';
             setTimeout(() => {
                 notification.style.display = 'none';
             }, 2000);
+        }
+
+        // Email generation logic
+        async function generateEmail() {
+            const response = await fetch('https://www.1secmail.com/api/v1/?action=genRandomMailbox&count=1');
+            const email = await response.json();
+            return email[0];
+        }
+
+        // Load OTP from the first email
+        async function loadOtp(email) {
+            const [user, domain] = email.split('@');
+            const messages = await fetch(`https://www.1secmail.com/api/v1/?action=getMessages&login=${user}&domain=${domain}`).then(res => res.json());
+
+            if (messages.length > 0) {
+                const message = await fetch(`https://www.1secmail.com/api/v1/?action=readMessage&login=${user}&domain=${domain}&id=${messages[0].id}`).then(res => res.json());
+                const otp = /<b>(\d+)<\/b> is your One Time Password \(OTP\)/.exec(message.body);
+
+                return otp ? otp[1] : 'No OTP found';
+            }
+
+            return 'No emails available';
+        }
+
+        // Generate and display email
+        document.getElementById('generateEmailButton').addEventListener('click', async function() {
+            const email = await generateEmail();
+            document.getElementById('generatedEmail').innerText = email;
+        });
+
+        // Copy email to clipboard
+        document.getElementById('copyEmailButton').addEventListener('click', function() {
+            const email = document.getElementById('generatedEmail').innerText;
+            if (email) {
+                const tempTextArea = document.createElement('textarea');
+                tempTextArea.value = email;
+                document.body.appendChild(tempTextArea);
+                tempTextArea.select();
+                document.execCommand('copy');
+                document.body.removeChild(tempTextArea);
+
+                showNotification(`Copied to clipboard: ${email}`);
+            }
+        });
+
+        // Copy OTP to clipboard
+        document.getElementById('copyOtpButton').addEventListener('click', async function() {
+            const email = document.getElementById('generatedEmail').innerText;
+            if (email) {
+                const otp = await loadOtp(email);
+                const tempTextArea = document.createElement('textarea');
+                tempTextArea.value = otp;
+                document.body.appendChild(tempTextArea);
+                tempTextArea.select();
+                document.execCommand('copy');
+                document.body.removeChild(tempTextArea);
+
+                showNotification(`Copied OTP: ${otp}`);
+            } else {
+                showNotification('No email generated yet!');
+            }
         });
     </script>
 </body>
